Revision history for Gimp-Perl extension.

1.035 Wed Sep 30 23:58:02 CEST 1998
	- Gimp::ignore_functions can be used to ignore AUTOLOADING
	  of some functions. This is mainly for the benefit of interface
	  modules.
	- Gimp::Net/spawn will ignore gimp_progress_init and other, similar
	  gui dependent functions.
	- changed lookup order again to ease overwriting functions.
	- fixed the bug with not using the perl version of some functions
	  (like gimp_list_images)

1.034 Wed Sep 16 21:21:42 CEST 1998
	- various bugfixes in Gimp::Fu
	- added slider type to Gimp::Fu (PF_SLIDER), see webify.pl
	  for a demo.

1.033 Tue Sep 15 17:53:50 CEST 1998
	- added mailing list info to the README
	- compatibility fix for 5.004

1.032 Mon Sep 14 02:29:55 CEST 1998
	- Gimp::Fu now has (some) support for return values. I told you to
	  return undef ;)
	- fixed memory problem in Gimp::Lib when param array was empty.
	- removed bogus plug_in_ name prefix form the examples
	- don't install border.pl by default, gimp is just too buggy ;)
	- webify.pl now doesn't cut the layer away if the selection is empty.
	- added FG/BG buttons to fetch colours to Gimp::Fu (try Filters/Misc/Webify)
	- disabled intensive tests (batch mode now requires script-fu...
	  bleeech)

1.031 Sun Sep 13 21:50:51 CEST 1998
	- non-OO syntax works again (silly me) (and is no longer deprecated,
	  but the default!)
	- Gimp::function syntax officially does not work anymore. Use
	  Gimp->function syntax now (or use :auto)
	- made compatible with the newest gimp snapshit. wrote
	  lamentation to gimp-developers. commited suicide.
	- added examples/webify.pl
	- first try to implement return values in Gimp. Gimp::Fu still
	  lacks support.

1.03 Wed Sep  9 21:04:54 CEST 1998
	- all files are now readable/exec'able by group owner
	- updated some examples to the new syntax
	- small documentation changes (still waaay to go..)
	- Gimp::Fu now allows any string as colour specifier.