@@ -4,6 +4,8 @@ up-to-date and may not even be readable ;)
 bugs
 
   * perl_fu_webify in homepage-logo.pl
+[DONE]  * attempt to free unreferenced
+  * drawable is compatible to layer AND VICE VERSA (convert_sv2gimp)
 [DONE]  * return values do not at all work
   * enable t/run.t again (but how? different solutions
     for gimp-1.0 and gimp-1.1???)
@@ -16,17 +18,16 @@ bugs
   
 important issues
 
-[DONE]  * can $value be changed in interact?
-  * adjustment, font selector &c..
+  * reset to defaults button
+[DONE]  * adjustment, spinner &c..
 [DONE]  * doc update: return vals, return undef, main() etc.
   * create working progress when Net and $verbose
   * require Storable soon(!)
   * Gimp::Fu::command(?)
-[DONE]  * authorization
   * Untitled/0 Untitled/1 etc..
   * default parameters at end(!)
   * try to deduce default parameters
-  * return values for run()
+[DONE}  * return values for run()
 
 not-so-important issues and ideas
 
